src/main/resources/com/xx/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "port"
    prometheus.io/spring: "true"
    prometheus.io/path: actuator/prometheus
  name: name
spec:
  selector:
    app: svc-name
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 1234
  type: ClusterIP
